--- a/about/index.html
+++ b/about/index.html
@@ -97,7 +97,33 @@ else{w.loadCSS=loadCSS}}(typeof global!=="undefined"?global:this))
       <div class="container">
         <div class="page-content">
 
-          <p>PandaOS 是一款国内开源 Linux 社区发行版，由爱好者们构建，目标是提供简洁、易用美观的 PC 操作系统，使用 C++/Qt 技术开发新的桌面环境。</p>
+          <p>pandaOS is a Linux distribution that uses C ++ and Qt technology to develop a new desktop environment. We are an open source community, anyone can contribute to pandaOS, such as translating your local language, submitting bugs, and contributing code…</p>
+
+<h2 id="core-members">Core members</h2>
+
+<p><a href="https://github.com/rekols">Rekols</a> (C++/Qt Programmer)</p>
+
+<p><a href="https://github.com/felixonmars">Felix Yan</a> (Arch Linux Developer)</p>
+
+<p><a href="https://github.com/alvarosamudio">Alvaro Samudio</a> (C++/Qt Programmer)</p>
+
+<p><a href="https://github.com/PikachuHy">PikachuHy</a> (C++/Qt Programmer)</p>
+
+<p><a href="https://github.com/yutent">yutent</a> (Web Programmer)</p>
+
+<p><a href="https://github.com/higker">Deen Ding</a> (Go/Java Programmer)</p>
+
+<p><a href="https://github.com/grizzly-cn">grizzly-cn</a> (C++/Qt Programmer)</p>
+
+<p><a href="https://github.com/kikyoulzg">kikyoulzg</a> (Python Programmer)</p>
+
+<p><a href="https://github.com/keeferrourke">Keefer Rourke</a> (Designer)</p>
+
+<h2 id="contact">Contact</h2>
+
+<p>Github: <a href="https://github.com/pandaos">pandaOS</a></p>
+
+<p>Telegram Group: <a href="https://t.me/pandalinux">Link</a></p>
 
 
         </div>
