--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ else{w.loadCSS=loadCSS}}(typeof global!=="undefined"?global:this))
     <div class="hero lazyload" data-bg="/assets/img/posts/sleek_lg.jpg">
       <div class="hero__wrap">
         <h1 class="hero__title">pandaOS</h1>
-        <p class="hero__meta">PandaOS 是一款开源 Linux 发行版，使用 C++/Qt 技术开发新的 panda 桌面环境。
+        <p class="hero__meta">pandaOS is a Linux distribution with a built-in desktop environment built using C++ & Qt.
 </p>
       </div>
     </div>
